{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 127,
  "lineage": "a314656f-ea9e-0dd4-5ffc-18ffad6f9064",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nmsDBSecuritygropup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:security-group/sg-0b2504f6b285a1833",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b2504f6b285a1833",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nms-DB-Security-gropup",
            "name_prefix": "",
            "owner_id": "691805305572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nmsDBSecuritygropup",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsDBSecuritygropup",
              "Project": "nmsProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nmsNATGWEIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc8d3415ae19f65",
            "association_id": "eipassoc-06f5abe541d6bc7cc",
            "domain": "vpc",
            "id": "eipalloc-0fbc8d3415ae19f65",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0cc470d931271550d",
            "private_dns": "ip-10-0-0-130.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.130",
            "public_dns": "ec2-57-181-62-221.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.181.62.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nmsNATGWEIP1",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsNATGWEIP1",
              "Project": "nmsProject"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nmsNATGWEIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf243c0aff619071",
            "association_id": "eipassoc-0aeb4923c8d6c4f88",
            "domain": "vpc",
            "id": "eipalloc-0bf243c0aff619071",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-05c523c275410a06c",
            "private_dns": "ip-10-0-2-117.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.117",
            "public_dns": "ec2-54-65-217-108.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.217.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nmsNATGWEIP2",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsNATGWEIP2",
              "Project": "nmsProject"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nmsIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:internet-gateway/igw-02fc3ff6ab5841c96",
            "id": "igw-02fc3ff6ab5841c96",
            "owner_id": "691805305572",
            "tags": {
              "Name": "nmsIGW",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsIGW",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nmsNATGW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc8d3415ae19f65",
            "association_id": "eipassoc-06f5abe541d6bc7cc",
            "connectivity_type": "public",
            "id": "nat-0c1970c14428e1d9d",
            "network_interface_id": "eni-0cc470d931271550d",
            "private_ip": "10.0.0.130",
            "public_ip": "57.181.62.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a66dc47e565661f7",
            "tags": {
              "Name": "NATGW1",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "NATGW1",
              "Project": "nmsProject"
            }
          },
          "dependencies": [
            "module.nmstokyovpc.aws_eip.nmsNATGWEIP1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nmsNATGW2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf243c0aff619071",
            "association_id": "eipassoc-0aeb4923c8d6c4f88",
            "connectivity_type": "public",
            "id": "nat-09318b048d8b496e8",
            "network_interface_id": "eni-05c523c275410a06c",
            "private_ip": "10.0.2.117",
            "public_ip": "54.65.217.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba4cb64e61c2f656",
            "tags": {
              "Name": "NATGW2",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "NATGW2",
              "Project": "nmsProject"
            }
          },
          "dependencies": [
            "module.nmstokyovpc.aws_eip.nmsNATGWEIP2",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nmsPrivateRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:route-table/rtb-0219034c20bb01aaf",
            "id": "rtb-0219034c20bb01aaf",
            "owner_id": "691805305572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c1970c14428e1d9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nmsPrivateRT1",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPrivateRT1",
              "Project": "nmsProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nmstokyovpc.aws_eip.nmsNATGWEIP1",
            "module.nmstokyovpc.aws_nat_gateway.nmsNATGW1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nmsPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:route-table/rtb-046a936c9b8734888",
            "id": "rtb-046a936c9b8734888",
            "owner_id": "691805305572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fc3ff6ab5841c96",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nmsPublicRT",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPublicRT",
              "Project": "nmsProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nmstokyovpc.aws_internet_gateway.nmsIGW",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nmsPublicRTass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df06d51bde02c02a",
            "route_table_id": "rtb-046a936c9b8734888",
            "subnet_id": "subnet-0a66dc47e565661f7"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_internet_gateway.nmsIGW",
            "module.nmstokyovpc.aws_route_table.nmsPublicRT",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nmsPublicRTass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039b87acc708bd8f1",
            "route_table_id": "rtb-046a936c9b8734888",
            "subnet_id": "subnet-0ba4cb64e61c2f656"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_internet_gateway.nmsIGW",
            "module.nmstokyovpc.aws_route_table.nmsPublicRT",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nmsPrivatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:subnet/subnet-0490e3075de02a147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0490e3075de02a147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "691805305572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nmsPrivatesubnet1",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPrivatesubnet1",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nmsPrivatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:subnet/subnet-034edca0793952cce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034edca0793952cce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "691805305572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nmsPrivatesubnet2",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPrivatesubnet2",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nmsPublicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:subnet/subnet-0a66dc47e565661f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a66dc47e565661f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "691805305572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nmsPublicsubnet1",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPublicsubnet1",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nmsPublicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:subnet/subnet-0ba4cb64e61c2f656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba4cb64e61c2f656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "691805305572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nmsPublicsubnet2",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsPublicsubnet2",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.nmstokyovpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nmstokyovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:vpc/vpc-02de2295307e5a104",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017cdab160ec50d63",
            "default_route_table_id": "rtb-0659ea5d866c17968",
            "default_security_group_id": "sg-081bbdf3c8c12210c",
            "dhcp_options_id": "dopt-07c474ac4e92fa09e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02de2295307e5a104",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0659ea5d866c17968",
            "owner_id": "691805305572",
            "tags": {
              "Name": "nmsVPC",
              "project": "NMSproject"
            },
            "tags_all": {
              "Name": "nmsVPC",
              "project": "NMSproject"
            }
          }
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dafcef159a1fc745",
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:instance/i-0c9ff1af381eb2077",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9ff1af381eb2077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nmsKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de66e812109dc84c",
            "private_dns": "ip-10-0-0-36.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.36",
            "public_ip": "54.178.119.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f217586007e9b5e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eaab23dd14fa68f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a66dc47e565661f7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eaab23dd14fa68f5"
            ]
          },
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dafcef159a1fc745",
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:instance/i-0fdaf267ebc8e8390",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdaf267ebc8e8390",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nmsKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094f2b1d612e37111",
            "private_dns": "ip-10-0-2-234.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.234",
            "public_ip": "18.183.81.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d46d3ac1e916fed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eaab23dd14fa68f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba4cb64e61c2f656",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eaab23dd14fa68f5"
            ]
          },
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nmsLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:loadbalancer/app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8",
            "arn_suffix": "app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20231217085150219900000001-554728341.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:loadbalancer/app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20231217085150219900000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eaab23dd14fa68f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a66dc47e565661f7"
              },
              {
                "subnet_id": "subnet-0ba4cb64e61c2f656"
              }
            ],
            "subnets": [
              "subnet-0a66dc47e565661f7",
              "subnet-0ba4cb64e61c2f656"
            ],
            "tags": {
              "Name": "nmsLoadBalancer",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsLoadBalancer",
              "Project": "nmsProject"
            },
            "vpc_id": "vpc-02de2295307e5a104",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nmsLblistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:listener/app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8/14f9a765124fd20a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:listener/app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8/14f9a765124fd20a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:loadbalancer/app/tf-lb-20231217085150219900000001/f16cffaa7d07b5f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_lb.nmsLoadBalancer",
            "module.webserver.aws_lb_target_group.nmsTargetGroup",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nmsTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f",
            "arn_suffix": "targetgroup/trail-target-group/1fd29774843ae80f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trail-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nmsTargetGroup",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsTargetGroup",
              "Project": "nmsProject"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ws1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f-20231217101424024200000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f",
            "target_id": "i-0c9ff1af381eb2077"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_instance.ws1",
            "module.webserver.aws_lb_target_group.nmsTargetGroup",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ws2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f-20231217101413582300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:691805305572:targetgroup/trail-target-group/1fd29774843ae80f",
            "target_id": "i-0fdaf267ebc8e8390"
          },
          "dependencies": [
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet1",
            "module.nmstokyovpc.aws_subnet.nmsPublicsubnet2",
            "module.nmstokyovpc.aws_vpc.nmstokyovpc",
            "module.webserver.aws_instance.ws2",
            "module.webserver.aws_lb_target_group.nmsTargetGroup",
            "module.webserver.aws_security_group.nmsWSSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nmsWSSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:691805305572:security-group/sg-0eaab23dd14fa68f5",
            "description": "Allow ssh trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaab23dd14fa68f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "691805305572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nmsWSSecuritygroup",
              "Project": "nmsProject"
            },
            "tags_all": {
              "Name": "nmsWSSecuritygroup",
              "Project": "nmsProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-02de2295307e5a104"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nmstokyovpc.aws_vpc.nmstokyovpc"
          ]
        }
      ]
    }
  ]
}